--- a/ArmaTuFecha/src/main/resources/templates/logout.html
+++ b/ArmaTuFecha/src/main/resources/templates/logout.html
@@ -1,86 +1,76 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="es" layout:decorate="estructura-logueado">
 
-  <head>
+<head>
 
-    <meta charset="utf-8"></meta>
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"></meta>
-   
+<meta charset="utf-8"></meta>
+<meta name="viewport"
+	content="width=device-width, initial-scale=1, shrink-to-fit=no"></meta>
 
-    <title>Logout</title>
 
-    <!-- Bootstrap core CSS -->
-    <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet"></link>
+<title>Logout</title>
 
-    <!-- Custom styles for this template -->
-    <link href="/css/scrolling-nav.css" rel="stylesheet"></link>
-    <link rel="stylesheet" type="text/css" href="/css/estilos.css"></link>
-  </head>
+<!-- Bootstrap core CSS -->
+<link rel="stylesheet"
+	href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
+	integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
+	crossorigin="anonymous"></link>
 
-  <body id="page-top">
+<!-- Custom styles for this template -->
+<link href="/css/scrolling-nav.css" rel="stylesheet"></link>
+<link rel="stylesheet" type="text/css" href="/css/estilos.css"></link>
+</head>
 
-    <!-- Navigation -->
-	<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top"
-		id="mainNav">
-		<div class="container">
-			<a class="navbar-brand js-scroll-trigger" href="#page-top">Arma
-				Tu Fecha</a>
-			<button class="navbar-toggler" type="button" data-toggle="collapse"
-				data-target="#navbarResponsive" aria-controls="navbarResponsive"
-				aria-expanded="false" aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-			</button>
-			<div class="collapse navbar-collapse" id="navbarResponsive">
-				<ul class="navbar-nav ml-auto">
-					<li class="nav-item"><a class="nav-link js-scroll-trigger"
-						th:href="'/' + ${nombre} + '/' + ${id_usuario} + '/home'">Home</a></li>
-					<li class="nav-item"><a class="nav-link js-scroll-trigger"
-						th:href="'/' + ${nombre} + '/' + ${id_usuario} + '/mi-perfil'">Mi
-							Perfil</a></li>
-				</ul>
+<body id="page-top">
+
+	<!-- Navigation -->
+
+
+	<header class="bg-primary text-white bootstrap-override-header3"
+		id="color1" layout:fragment="header-logueado">
+		<div class="container text-center">
+			<div class="row">
+				<div class="col">
+
+					<h1>Por favor, cierra tu sesión para continuar:</h1>
+					<br> <br>
+
+				</div>
 			</div>
+			<div class="row">
+				<div class="col">
+					<a class="btn btn-outline-light btn-lg" href="/logout">Logout</a>
+				</div>
+			</div>
+
+
 		</div>
-	</nav>
+	</header>
 
-	<header class="bg-primary text-white bootstrap-override-header3" id="color1">
-      <div class="container text-center">    
-        <div class="row">
-        	<div class="col">
-        		
-        		<h1>Por favor, cierra tu sesión para continuar:</h1><br><br>
-        		
-        	</div>
-        </div>	
-        <div class="row">
-        	<div class="col">
-        		<a class="btn btn-outline-light btn-lg" href="/logout">Logout</a>	
-        	</div>
-        </div>		
-        
-        
- 	  </div>	   
-    </header>
 
-    
 
-    <!-- Footer -->
-    <footer class="py-5 bg-dark">
-      <div class="container">
-        <p class="m-0 text-center text-white">Copyright &copy; Your Website 2017</p>
-      </div>
-      <!-- /.container -->
-    </footer>
+	<!-- Footer -->
 
-    <!-- Bootstrap core JavaScript -->
-    <script src="/vendor/jquery/jquery.min.js"></script>
-    <script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
-    <!-- Plugin JavaScript -->
-    <script src="/vendor/jquery-easing/jquery.easing.min.js"></script>
+	<!-- Bootstrap core JavaScript -->
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+		crossorigin="anonymous"></script>
+	<script
+		src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+		integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+		crossorigin="anonymous"></script>
+	<script
+		src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"
+		integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
+		crossorigin="anonymous"></script>
 
-    <!-- Custom JavaScript for this theme -->
-    <script src="/js/scrolling-nav.js"></script>
+	<!-- Plugin JavaScript -->
+	<script src="/vendor/jquery-easing/jquery.easing.min.js"></script>
 
-  </body>
+	<!-- Custom JavaScript for this theme -->
+	<script src="/js/scrolling-nav.js"></script>
+
+</body>
 
 </html>
