--- a/ArmaTuFecha/src/main/resources/templates/perfil-musico-logueado.html
+++ b/ArmaTuFecha/src/main/resources/templates/perfil-musico-logueado.html
@@ -1,27 +1,31 @@
 <!DOCTYPE html>
 <html lang="es">
 
-  <head>
+<head>
 
-    <meta charset="utf-8"></meta>
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"></meta>
-    
+<meta charset="utf-8"></meta>
+<meta name="viewport"
+	content="width=device-width, initial-scale=1, shrink-to-fit=no"></meta>
 
-    <title th:text="${nombre}"></title>
 
-    <!-- Bootstrap core CSS -->
-    <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet"></link>
+<title th:text="${nombre}"></title>
 
-    <!-- Custom styles for this template -->
-    <link href="/css/portfolio-item.css" rel="stylesheet"></link>
-    <link href="/css/scrolling-nav.css" rel="stylesheet"></link>
-    <link rel="stylesheet" type="text/css" href="/css/estilos.css"></link>
+<!-- Bootstrap core CSS -->
+<link rel="stylesheet"
+	href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
+	integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
+	crossorigin="anonymous"></link>
 
-  </head>
+<!-- Custom styles for this template -->
+<link href="/css/portfolio-item.css" rel="stylesheet"></link>
+<link href="/css/scrolling-nav.css" rel="stylesheet"></link>
+<link rel="stylesheet" type="text/css" href="/css/estilos.css"></link>
 
-  <body>
+</head>
 
-    <!-- Navigation -->
+<body>
+
+	<!-- Navigation -->
 	<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top"
 		id="mainNav">
 		<div class="container">
@@ -36,12 +40,11 @@
 				<ul class="navbar-nav ml-auto">
 					<li class="nav-item"><a class="nav-link js-scroll-trigger"
 						th:href="'/' + ${nombre} + '/' + ${id_usuario} + '/home'">Home</a></li>
-					<li class="nav-item">
-		              <a class="nav-link js-scroll-trigger" th:href="'/' + ${nombre} + '/' + ${id_usuario} + '/mi-perfil'">Mi Perfil</a>
-		             </li> 	
-		            <li class="nav-item">
-		              <a class="nav-link js-scroll-trigger" href="/logout">Log out</a>
-		            </li>
+					<li class="nav-item"><a class="nav-link js-scroll-trigger"
+						th:href="'/' + ${nombre} + '/' + ${id_usuario} + '/mi-perfil'">Mi
+							Perfil</a></li>
+					<li class="nav-item"><a class="nav-link js-scroll-trigger"
+						href="/logout">Log out</a></li>
 				</ul>
 			</div>
 		</div>
@@ -49,107 +52,144 @@
 
 
 	<!-- Page Content -->
-    <div class="container">
+	<div class="container">
 
-      <!-- Portfolio Item Heading -->
-      <h1 class="my-4" th:text="${nombre}">
-      </h1>
-      <div class="row">
-      	<div class="col-md-8">
-			<div class="row">
-				<div class="col-md-12">
-					<div id="carouselExampleIndicators" class="carousel slide my-4" data-ride="carousel">
-            <ol class="carousel-indicators">
-              <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-              <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-              <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-            </ol>
-            <div class="carousel-inner" role="listbox">
-              <div class="carousel-item active">
-                <img class="d-block img-fluid" th:src="${foto1}"   alt="First slide">
-              </div>
-              <div class="carousel-item">
-                <img class="d-block img-fluid" th:src="${foto2}"   alt="Second slide">
-              </div>
-              <div class="carousel-item">
-                <img class="d-block img-fluid" th:src="${foto3}"  alt="Third slide">
-              </div>
-            </div>
-            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="sr-only">Next</span>
-            </a>
-          </div>
+		<!-- Portfolio Item Heading -->
+		<h1 class="my-4" th:text="${nombre}"></h1>
+		<div class="row">
+			<div class="col-md-8">
+				<div class="row">
+					<div class="col-md-12">
+						<div id="carouselExampleIndicators" class="carousel slide my-4"
+							data-ride="carousel">
+							<ol class="carousel-indicators">
+								<li data-target="#carouselExampleIndicators" data-slide-to="0"
+									class="active"></li>
+								<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+								<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+							</ol>
+							<div class="carousel-inner" role="listbox">
+								<div class="carousel-item active">
+									<img class="d-block img-fluid" th:src="${foto1}"
+										alt="First slide">
+								</div>
+								<div class="carousel-item">
+									<img class="d-block img-fluid" th:src="${foto2}"
+										alt="Second slide">
+								</div>
+								<div class="carousel-item">
+									<img class="d-block img-fluid" th:src="${foto3}"
+										alt="Third slide">
+								</div>
+							</div>
+							<a class="carousel-control-prev"
+								href="#carouselExampleIndicators" role="button"
+								data-slide="prev"> <span class="carousel-control-prev-icon"
+								aria-hidden="true"></span> <span class="sr-only">Previous</span>
+							</a> <a class="carousel-control-next"
+								href="#carouselExampleIndicators" role="button"
+								data-slide="next"> <span class="carousel-control-next-icon"
+								aria-hidden="true"></span> <span class="sr-only">Next</span>
+							</a>
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-12">
+						<h3 class="my-3">Descripción</h3>
+						<p th:text="${descripcion}">Lorem ipsum dolor sit amet,
+							consectetur adipiscing elit. Nam viverra euismod odio, gravida
+							pellentesque urna varius vitae. Sed dui lorem, adipiscing in
+							adipiscing et, interdum nec metus. Mauris ultricies, justo eu
+							convallis placerat, felis enim.</p>
+
+
+					</div>
 				</div>
 			</div>
-			<div class="row">
-				<div class="col-12">
-					<h3 class="my-3">Descripción</h3>
-          			<p th:text="${descripcion}">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies, justo eu convallis placerat, felis enim.</p>
-       
-					
+			<div class="col-md-4">
+				<div class="row">
+					<div class="col">
+						<h3 class="my-3">Datos de contacto</h3>
+						<label th:text="${provincia} + ', '">Lorem Ipsum</label>&nbsp;<label
+							th:text="${localidad}">Lorem Ipsum</label><br> <label
+							th:text="${telefono}">a</label><br> <label
+							th:text="${mail_contacto}">a</label><br>
+
+
+					</div>
 				</div>
-			</div>      	
-      	</div>
-      	<div class="col-md-4">
-      		<div class="row">
-				<div class="col">
-					<h3 class="my-3">Datos de contacto</h3>
-					<label th:text="${provincia} + ', '">Lorem Ipsum</label>&nbsp;<label th:text="${localidad}">Lorem Ipsum</label><br>
-		            <label th:text="${telefono}">a</label><br>
-		            <label th:text="${mail_contacto}">a</label><br>
-		            
-				    
+				<div class="row">
+					<div class="col">
+						<h3 class="my-3">Redes sociales</h3>
+						<a th:href="${red_social1}"
+							th:if="${red_social1 != null && red_social1 != ''}"
+							th:text="${red_social1}">Facebook</a><br>
+						<br> <a th:href="${red_social2}"
+							th:if="${red_social2 != null && red_social2 != ''}"
+							th:text="${red_social2}">Instagram</a><br>
+						<br> <a th:href="${red_social3}"
+							th:if="${red_social3 != null && red_social3 != ''}"
+							th:text="${red_social3}">Otro</a><br>
+						<br> <a th:href="${link_musica1}"
+							th:if="${link_musica1 != null && link_musica1 != ''}"
+							th:text="${link_musica1}">YouTube</a><br>
+						<br> <a th:href="${link_musica2}"
+							th:if="${link_musica2 != null && link_musica2 != ''}"
+							th:text="${link_musica1}">Bandcamp</a><br>
+						<br> <a th:href="${link_musica3}"
+							th:if="${link_musica3 != null && link_musica3 != ''}"
+							th:text="${link_musica1}">Otro</a><br>
+						<br> <a
+							th:href="'/' + ${nombre} + '/' + ${id_usuario} + '/mi-perfil/editar'">Editar
+							datos del perfil</a><br>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col">
+						<h3 class="my-3">Datos de la cuenta</h3>
+						<label>Mail:&nbsp;</label><label th:text="${mail}"></label><br>
+						<label>Contraseña:&nbsp;</label><label th:text="${contrasenia}"></label><br>
+						<a
+							th:href="'/' + ${nombre} + '/' + ${id_usuario} + '/mi-perfil/editar-datos-usuario'">Editar
+							datos de usuario</a><br></br> <a
+							th:href="'/' + ${nombre} + '/' + ${id_usuario} + '/mi-perfil/eliminar-cuenta'">Eliminar
+							cuenta y perfil</a><br>
+						<br>
+					</div>
 				</div>
 			</div>
-			<div class="row">	
-				<div class="col">
-					<h3 class="my-3">Redes sociales</h3>
-					<a th:href="${red_social1}" th:if="${red_social1 != null && red_social1 != ''}" th:text="${red_social1}">Facebook</a><br><br>
-					<a th:href="${red_social2}" th:if="${red_social2 != null && red_social2 != ''}" th:text="${red_social2}">Instagram</a><br><br>
-				    <a th:href="${red_social3}" th:if="${red_social3 != null && red_social3 != ''}" th:text="${red_social3}">Otro</a><br><br>
-				     <a th:href="${link_musica1}" th:if="${link_musica1 != null && link_musica1 != ''}" th:text="${link_musica1}">YouTube</a><br><br>
-					<a th:href="${link_musica2}" th:if="${link_musica2 != null && link_musica2 != ''}" th:text="${link_musica1}">Bandcamp</a><br><br>
-					<a th:href="${link_musica3}" th:if="${link_musica3 != null && link_musica3 != ''}" th:text="${link_musica1}">Otro</a><br><br>
-				    <a th:href="'/' + ${nombre} + '/' + ${id_usuario} + '/mi-perfil/editar'">Editar datos del perfil</a><br>
-				</div>
-			</div>
-			<div class="row">			
-				<div class="col">
-					<h3 class="my-3">Datos de la cuenta</h3>
-				  	<label>Mail:&nbsp;</label><label th:text="${mail}"></label><br>
-				  	<label>Contraseña:&nbsp;</label><label th:text="${contrasenia}"></label><br>
-				  	<a th:href="'/' + ${nombre} + '/' + ${id_usuario} + '/mi-perfil/editar-datos-usuario'">Editar datos de usuario</a><br></br>
-					
-					<a th:href="'/' + ${nombre} + '/' + ${id_usuario} + '/mi-perfil/eliminar-cuenta'">Eliminar cuenta y perfil</a><br><br>		
-				</div> 
-			</div>		     	
-      	</div>
-      		
-      
-      </div>
-      
-  
 
-    </div>
-    <!-- /.container -->
 
-    <!-- Footer -->
-    <footer class="py-5 bg-dark">
-      <div class="container">
-        <p class="m-0 text-center text-white">Copyright &copy; Your Website 2018</p>
-      </div>
-      <!-- /.container -->
-    </footer>
+		</div>
 
-    <!-- Bootstrap core JavaScript -->
-    <script src="/vendor/jquery/jquery.min.js"></script>
-    <script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
-  </body>
+
+	</div>
+	<!-- /.container -->
+
+	<!-- Footer -->
+	<footer class="py-5 bg-dark">
+		<div class="container">
+			<p class="m-0 text-center text-white">Copyright &copy; Your
+				Website 2018</p>
+		</div>
+		<!-- /.container -->
+	</footer>
+
+	<!-- Bootstrap core JavaScript -->
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+		crossorigin="anonymous"></script>
+	<script
+		src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+		integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+		crossorigin="anonymous"></script>
+	<script
+		src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"
+		integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
+		crossorigin="anonymous"></script>
+
+</body>
 
 </html>
