--- a/ArmaTuFecha/src/main/resources/templates/resultado-busqueda-musicos-nombre.html
+++ b/ArmaTuFecha/src/main/resources/templates/resultado-busqueda-musicos-nombre.html
@@ -1,127 +1,119 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="es" layout:decorate="estructura-listado">
 
-  <head>
+<head>
 
-    <meta charset="utf-8"></meta>
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"></meta>
-   
+<meta charset="utf-8"></meta>
+<meta name="viewport"
+	content="width=device-width, initial-scale=1, shrink-to-fit=no"></meta>
 
-    <title>Músicos</title>
 
-    <!-- Bootstrap core CSS -->
-    <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet"></link>
+<title>Músicos</title>
 
-    <!-- Custom styles for this template -->
-    <link href="/css/3-col-portfolio.css" rel="stylesheet"></link>
-    <link href="/css/scrolling-nav.css" rel="stylesheet"></link>
-    <link rel="stylesheet" type="text/css" href="/css/estilos.css"></link>
-    
+<!-- Bootstrap core CSS -->
+<link rel="stylesheet"
+	href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
+	integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
+	crossorigin="anonymous"></link>
 
-  </head>
+<!-- Custom styles for this template -->
+<link href="/css/3-col-portfolio.css" rel="stylesheet"></link>
+<link href="/css/scrolling-nav.css" rel="stylesheet"></link>
+<link rel="stylesheet" type="text/css" href="/css/estilos.css"></link>
 
-  <body>
 
-    <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top"
-		id="mainNav">
-		<div class="container">
-			<a class="navbar-brand js-scroll-trigger" href="#page-top">Arma
-				Tu Fecha</a>
-			<button class="navbar-toggler" type="button" data-toggle="collapse"
-				data-target="#navbarResponsive" aria-controls="navbarResponsive"
-				aria-expanded="false" aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-			</button>
-			<div class="collapse navbar-collapse" id="navbarResponsive">
-				<ul class="navbar-nav ml-auto">
-					<li class="nav-item"><a class="nav-link js-scroll-trigger"
-						href="/">Home</a></li>
-					<li class="nav-item"><a class="nav-link js-scroll-trigger"
-						href="/login">Log in</a></li>
-				</ul>
+</head>
+
+<body>
+
+	<!-- Navigation -->
+
+
+	<header class="bg-primary text-white bootstrap-override-header2"
+		id="color1" layout:fragment="header-listado">
+		<div class="container text-center">
+			<div class="row">
+				<div class="col">
+					<h1>
+						Revisa los perfiles y encontrá las mejores bandas<br>para
+						organizar tu fecha
+					</h1>
+				</div>
+
 			</div>
 		</div>
-	</nav>
 
-	<header class="bg-primary text-white bootstrap-override-header2" id="color1">
-		      <div class="container text-center">    
-		        <div class="row">
-		        	<div class="col"  >
-		        		<h1>Revisa los perfiles y encontrá el mejor lugar<br>para hacer tu fecha</h1>
-		        	</div>
-		        	
-		        </div>
-		      </div>
-	 <!-- TO DO select para buscar/"filtrar" por provincia y localidad-->             
-     </header>
-    <!-- Page Content -->
-    <section id="about" class="bootstrap-override-section">
-    <div class="container">
-	
-      <!-- Page Heading -->
-      <div class="row">
-        <div class="col-lg-4 col-sm-6 portfolio-item" th:each="perfilMusico:${listadoMusicos}">
-          <div class="card h-100">
-            <a th:href="'/vista-perfil-musico/' + ${perfilMusico.id_usuario}"><img class="card-img-top" th:src="${perfilMusico.foto1}" alt=""></a>
-            <div class="card-body">
-              <h4 class="card-title">
-                <a th:href="'/vista-perfil-musico/' + ${perfilMusico.id_usuario}" th:text="${perfilMusico.nombre}">Project One</a>
-              </h4>
-              <p class="card-text" >
-                    <label th:text="${perfilMusico.provincia} + ', '"></label>&nbsp;<label th:text="${perfilMusico.localidad}"></label><br>
-					<label>Teléfono:&nbsp; </label><label th:text="${perfilMusico.telefono}">Teléfono</label><br>
-					<label>Mail:&nbsp; </label><label th:text="${perfilMusico.mail_contacto}">Mail</label><br>
-					<a th:href="${perfilMusico.red_social1}" th:if="${perfilMusico.red_social1 != null && perfilMusico.red_social1 != ''}" th:text="${perfilMusico.red_social1}">Facebook</a><br><br>
-              </p>
-            </div>
-          </div>
-        </div>
-     </div> 
-     </div>
-     </section>
-      <!-- /.row -->
+	</header>
+	<!-- Page Content -->
+	<section id="about" class="bootstrap-override-section"
+		layout:fragment="seccion-listado">
+		<div class="container">
 
-      <!-- Pagination -->
-      <ul class="pagination justify-content-center">
-        <li class="page-item">
-          <a class="page-link" href="#" aria-label="Previous">
-            <span aria-hidden="true">&laquo;</span>
-            <span class="sr-only">Previous</span>
-          </a>
-        </li>
-        <li class="page-item">
-          <a class="page-link" href="#">1</a>
-        </li>
-        <li class="page-item">
-          <a class="page-link" href="#">2</a>
-        </li>
-        <li class="page-item">
-          <a class="page-link" href="#">3</a>
-        </li>
-        <li class="page-item">
-          <a class="page-link" href="#" aria-label="Next">
-            <span aria-hidden="true">&raquo;</span>
-            <span class="sr-only">Next</span>
-          </a>
-        </li>
-      </ul>
+			<!-- Page Heading -->
+			<div class="row">
+				<div class="col-lg-4 col-sm-6 portfolio-item"
+					th:each="perfilMusico:${listadoMusicos}">
+					<div class="card h-100">
+						<a th:href="'/vista-perfil-musico/' + ${perfilMusico.id_usuario}"><img
+							class="card-img-top" th:src="${perfilMusico.foto1}" alt=""></a>
+						<div class="card-body">
+							<h4 class="card-title">
+								<a
+									th:href="'/vista-perfil-musico/' + ${perfilMusico.id_usuario}"
+									th:text="${perfilMusico.nombre}">Project One</a>
+							</h4>
+							<p class="card-text">
+								<label th:text="${perfilMusico.provincia} + ', '"></label>&nbsp;<label
+									th:text="${perfilMusico.localidad}"></label><br> <label>Teléfono:&nbsp;
+								</label><label th:text="${perfilMusico.telefono}">Teléfono</label><br>
+								<label>Mail:&nbsp; </label><label
+									th:text="${perfilMusico.mail_contacto}">Mail</label><br> <a
+									th:href="${perfilMusico.red_social1}"
+									th:if="${perfilMusico.red_social1 != null && perfilMusico.red_social1 != ''}"
+									th:text="${perfilMusico.red_social1}">Facebook</a><br>
+								<br>
+							</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!-- /.row -->
 
-   
-    <!-- /.container -->
+	<!-- Pagination -->
+	<ul class="pagination justify-content-center">
+		<li class="page-item"><a class="page-link" href="#"
+			aria-label="Previous"> <span aria-hidden="true">&laquo;</span> <span
+				class="sr-only">Previous</span>
+		</a></li>
+		<li class="page-item"><a class="page-link" href="#">1</a></li>
+		<li class="page-item"><a class="page-link" href="#">2</a></li>
+		<li class="page-item"><a class="page-link" href="#">3</a></li>
+		<li class="page-item"><a class="page-link" href="#"
+			aria-label="Next"> <span aria-hidden="true">&raquo;</span> <span
+				class="sr-only">Next</span>
+		</a></li>
+	</ul>
 
-    <!-- Footer -->
-    <footer class="py-5 bg-dark">
-      <div class="container">
-        <p class="m-0 text-center text-white">Copyright &copy; Your Website 2018</p>
-      </div>
-      <!-- /.container -->
-    </footer>
 
-    <!-- Bootstrap core JavaScript -->
-    <script src="/vendor/jquery/jquery.min.js"></script>
-    <script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+	<!-- /.container -->
 
-  </body>
+	<!-- Footer -->
+
+	<!-- Bootstrap core JavaScript -->
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+		crossorigin="anonymous"></script>
+	<script
+		src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+		integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+		crossorigin="anonymous"></script>
+	<script
+		src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"
+		integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
+		crossorigin="anonymous"></script>
+
+</body>
 
 </html>
