prueba, error con css y jss

--- a/ArmaTuFecha/src/main/resources/templates/estructura-nologueado.html
+++ b/ArmaTuFecha/src/main/resources/templates/estructura-nologueado.html
@@ -8,6 +8,8 @@
 	content="width=device-width, initial-scale=1, shrink-to-fit=no"></meta>
 
 
+<title>Arma Tu Fecha</title>
+
 <!-- Bootstrap core CSS -->
 <link rel="stylesheet"
 	href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
@@ -43,13 +45,14 @@
 			</div>
 		</div>
 	</nav>
+	
+	<header class="bg-primary text-white" id="color1" layout:fragment="header1">
+		
+	</header>
 
-	<header class="bg-primary text-white" id="color1"
-		layout:fragment="header1"> </header>
-
-	<section id="about" layout:fragment="section1" ></section>
-
-
+	<section id="about" layout:fragment="section1">
+		
+	</section>
 
 	<!-- Footer -->
 	<footer class="py-5 bg-dark">
