--- a/ArmaTuFecha/src/main/resources/templates/crear-perfil.html
+++ b/ArmaTuFecha/src/main/resources/templates/crear-perfil.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es" layout:decorate="estructura-nologueado">
+<html lang="es" th:fragment="estructura-nologueado">
 
 <head>
 
@@ -28,10 +28,30 @@
 <body id="page-top">
 
 	<!-- Navigation -->
+	<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top"
+		id="mainNav">
+		<div class="container">
+			<a class="navbar-brand js-scroll-trigger" href="#page-top">Arma
+				Tu Fecha</a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse"
+				data-target="#navbarResponsive" aria-controls="navbarResponsive"
+				aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarResponsive">
+				<ul class="navbar-nav ml-auto">
+					<li class="nav-item"><a class="nav-link js-scroll-trigger"
+						href="/">Home</a></li>
+					<li class="nav-item"><a class="nav-link js-scroll-trigger"
+						href="/login">Log in</a></li>
+				</ul>
+			</div>
+		</div>
+	</nav>
 
 
 	<header class="bg-primary text-white bootstrap-override-header"
-		id="color1" layout:fragment="header1">
+		id="color1">
 		<div class="container text-center">
 			<div class="row">
 				<div class="col-12">
@@ -87,8 +107,7 @@
 		</div>
 	</header>
 
-	<section id="formulario-local" class="bootstrap-override-section"
-		layout:fragment="section1">
+	<section id="formulario-local" class="bootstrap-override-section">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-8 mx-auto">
@@ -201,8 +220,7 @@
 		</div>
 	</section>
 
-	<section id="formulario-musico" class="bootstrap-override-section"
-		layout:fragment="section1">
+	<section id="formulario-musico" class="bootstrap-override-section">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-8 mx-auto">
@@ -317,8 +335,16 @@
 	</section>
 
 	<!-- Footer -->
+	<footer class="py-5 bg-dark">
+		<div class="container">
+			<p class="m-0 text-center text-white">Copyright &copy; Your
+				Website 2018</p>
+		</div>
+		<!-- /.container -->
+	</footer>
 
 
+    
 	<!-- Bootstrap core JavaScript -->
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
 		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
@@ -340,6 +366,7 @@
 	<script src="/js/scrolling-nav.js"></script>
 	<script src="/js/formulario.js"></script>
 	<script src="/js/validacionform.js"></script>
+	
 	<script src="/js/cloudinary.js"></script>
 
 	<script src="//widget.cloudinary.com/global/all.js"
