--- a/ArmaTuFecha/src/main/resources/templates/perfil-musico.html
+++ b/ArmaTuFecha/src/main/resources/templates/perfil-musico.html
@@ -24,6 +24,14 @@
 </head>
 
 <body>
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = 'https://connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v3.0';
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
 
 	<!-- Navigation -->
 	<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top"
@@ -100,6 +108,13 @@
 							convallis placerat, felis enim.</p>
 
 
+					</div>
+				</div>
+				<div class="row">
+					<div class="col">
+						<div class="fb-comments"
+							th:data-href="'https://armatufecha.herokuapp.com/musicos/' + ${nombre} + '/' + ${id_usuario}"
+							data-numposts="5"></div>
 					</div>
 				</div>
 			</div>
